GIF/Image updates

--- a/Homepage.css
+++ b/Homepage.css
@@ -104,7 +104,7 @@ td:hover {
         width: 200px;
         background-color: #ffffff;
         border: 20px solid #804343;
-        background-image: url('C:\Users\jackr\Desktop\website\hunie.jpg');
+        background-image: url('C:\Users\jackr\Documents\GitHub\CookieWeb\hunie.jpg');
         background-repeat: no-repeat;
         background-size: 100%;
         background-image: none;
