--- a/Main.css
+++ b/Main.css
@@ -15,7 +15,7 @@ body{
       display: block;
       margin-left: auto;
       margin-right: auto;
-      background: url('C:\Users\jackr\Desktop\website\chromatic-square.gif');
+      background: url('C:\Users\jackr\Documents\GitHub\CookieWeb\chromatic-square.gif');
      }
     #msg{
       text-align: center;
