--- a/Homepage.css
+++ b/Homepage.css
@@ -1,112 +1,127 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
-body{ 
-     background: rgb(180, 114, 114);
-    font-family: Fredoka One, Arial, Helvetica, sans-serif;
+body.red { 
+background: rgb(206, 76, 126);
+font-family: Fredoka One, Arial, Helvetica, sans-serif;
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    overflow: hidden;
-    background-color: rgb(221, 94, 94);
-    border-bottom:1px solid #fff;
-    padding:5px;
-    margin:2px;
-  }
+*{
+margin:0;
+}
+ul{/*nav*/
+position: sticky;
+top: 0;
+list-style-type: none;
+overflow: hidden;
+background-color: rgb(212, 65, 102);
+padding:5px;
+}
+#stroke{
+color:black;
+text-shadow:
+-1px -1px 0 white,
+1px -1px 0 white,
+-1px 1px 0 orange,
+1px 1px 0 orange; 
+}
+.list {  
+list-style-position: inside; 
+text-align: center;
+font-family: Fredoka One, Arial, Helvetica, sans-serif;
+font-weight:normal;
+font-style:normal;
+font-size: 150%;
+list-style-type: none;
+}
 li a:hover {
-    background-color: #111111;
+background-color: #111111;
 }
-h1:hover {
-    background-color: #111111;
+.title {
+width: 100%; 
+line-height:left;
+padding-top: 80px;
+height: 150px;
+animation: highlights 2s; 
+font-size:50;
+color:rgb(56, 44, 47);
 }
-  
-h1.title {
-    width: 100%; 
-    line-height:left;
-    position: sticky;
-    top: 0;
-    background: rgb(221, 94, 94);
+@keyframes highlights{
+from{transform: translatex(-100px);}
+to {transform: translatex(0px); }
 }
 #list{
-    display: inline;
-    background-color: #202094;
+display: inline;
+background-color: #202094;
 }
+/*nav bar*/
 .bar {
-    float:left;
-    margin-right: 100;
-    width: auto;
-    color: silver;
-    font-size: 20px;
-    font-weight: 5000;
-    letter-spacing: .9px;
-    text-decoration: none;
+top:0;
+margin-right:100;
+min-width: auto;
+float:left;
+color: white;
+text-decoration: none;
 }
 .top{
-    background: #000000;
-    color:#fdfdfd;
-    height:25;
-    width:48%;
-    padding:20;
-    margin-left: auto;
-    margin-right: auto;
-    text-decoration: underline  rgb(41, 34, 34) ;
+background: #000000;
+color:#fdfdfd;
+height:25;
+width:48%;
+padding:20;
+margin-left: auto;
+margin-right: auto;
+text-decoration: underline  rgb(41, 34, 34) ;
 }
 /*table props*/
 .data{
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+font-family: arial, sans-serif;
+border-collapse: collapse;
+width: 50%;
+margin-left: auto;
+margin-right: auto;
 }
 th {
-    background-color: rgb(92, 28, 55);
-    font-weight: bold;
-    text-align: left;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-  }
-  tr:nth-child(even) {
-    background-color: rgb(87, 3, 121);
-  }
+background-color: rgb(92, 28, 55);
+font-weight: bold;
+text-align: left;
+font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+tr:nth-child(even) {
+background-color: rgb(87, 3, 121);
+}
 #user{
-    border: 2px solid  rgb(112, 47, 74);
-    text-align: left;
-    padding: 8px;
-    color:#00fff2;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+border: 2px solid  rgb(112, 47, 74);
+text-align: left;
+padding: 8px;
+color:#00fff2;
+font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 td:hover {
-    padding:5;
-    background-color: rgb(0, 110, 253);
+padding:5;
+background-color: rgb(0, 110, 253);
 }
 .inline{
-    display: "inline-block";
-    width:100%;
-    opacity:50%;
-    border:white;
-    border-bottom: #fdfdfd;
+display: "inline-block";
+width:100%;
+opacity:50%;
+border:white;
+border-bottom: #fdfdfd;
 }
 .container {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
+position: relative;
+text-align: center;
+color: white;
+}
 .inside{
-    position: relative;
-    top: 10 0;
-    left: 50%;
-    transform: translate(-50%, -300%);
-  }
+position: relative;
+top: 10 0;
+left: 50%;
+transform: translate(-50%, -300%);
+}
 .intoyou{
-    transform: translate(-50%, -265%);
+transform: translate(-50%, -100%);
 }
 #a {
-        width: 200px;
-        background-color: #ffffff;
-        border: 20px solid #804343;
-        background-image: url('C:\Users\jackr\Documents\GitHub\CookieWeb\hunie.jpg');
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-image: none;
-        border-radius: 50%;
+width: 200px;
+background-size: 100%;
+border-radius: 50%;
 }
