--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -17,19 +17,23 @@ padding: 0;
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
+ 
 .topnav a {
-float: none;
-width: 100%;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
-}
+
 ul{/*nav*/
-position: sticky;
-top: 0;
-list-style-type: none;
 overflow: hidden;
-background-color: rgb(212, 65, 102);
-padding:5px;
+background-color: #333;
+position: fixed;
+top: 0;
+width: 100%;
 }
 .styles{
 color: white;
