--- a/Homepage.css
+++ b/Homepage.css
@@ -6,7 +6,6 @@ font-family: Fredoka One, Arial, Helvetica, sans-serif;
 }
 *{
 margin:0;
-box-sizing:border-box;
 }
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
@@ -15,21 +14,94 @@ width: 100%;
 padding: 0;
 }
 }
+.img{
+  background-image: url('chocolate.png');
+  background-size: 50px;
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  float:left;
+}
+/*nav bar*/
+.navbar {
+  width: 100%;
+  background-color: rgb(218, 40, 108);
+  overflow: hidden;
+  position:fixed;
+  top: 0;
+  z-index:1;/*cool -- specifies level of the ele*/
+}
+.navbar a {
+  float: left;
+  padding: 15px;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+  padding:15px;
+}
+.navbar a:hover{
+  background-color: rgb(31, 30, 30);
+  transition: all 0.5s ease;
+}
+.navbar .search-container {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+.navbar .search-container button:hover {
+  background: #ccc;
+}
+.navbar input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
 
-/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
-.topnav a {
-float: none;
-width: 100%;
+.navbar .search-container button {
+  float: right;
+  padding: 16px 16px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
 }
+li a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
 }
-ul{/*nav*/
-position: sticky;
-top: 0;
-list-style-type: none;
-overflow: hidden;
-background-color: rgb(212, 65, 102);
-padding:5px;
+
+li.dropdown {
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1;}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  transition: 0.3s;
 }
 .styles{
 color: white;
@@ -37,7 +109,7 @@ font-family:Fredoka One, Arial, Helvetica, sans-serif;
 font-weight:normal;
 font-style:normal;
 transform: translatey(-50px);
-position:absolute;
+position:relative;
 }
 #stroke{
 color:black;
@@ -55,32 +127,18 @@ clear: both;
 .column{
 float:left;
 background-color: #f1f1f1;
-padding:20px;
 }
 .column.middle{
 width:50%;
-
 }
 .leftside{
 width:25%;
-
 }
 .rightside{
 width: 25%;
 }
-.list {  
-list-style-position: inside; 
-text-align: center;
-font-family: Fredoka One, Arial, Helvetica, sans-serif;
-font-weight:normal;
-font-style:normal;
-font-size: 150%;
-list-style-type: none;
-}
-li a:hover {
-background-color: #111111;
-}
 .title {
+margin-top:50px;
 width: 100%; 
 line-height:left;
 height: 150px;
@@ -89,20 +147,18 @@ font-size:50;
 color:rgb(56, 44, 47);
 }
 .fakeimg {
-background-color: #aaa;
+background-color: rgb(118, 32, 255);
 width: 100%;
 }
 .height{
- max-height: 500;
+max-height: 500;
 }
 div {
-  display: block;
+display: block;
 }
 .card{
 background-color: rgb(212, 65, 102);
-
 }
-
 @keyframes highlights{
 from{transform: translatex(-100px);}
 to {transform: translatex(0px); }
@@ -110,17 +166,6 @@ to {transform: translatex(0px); }
 #list{
 display: inline;
 background-color: #202094;
-}
-/*nav bar*/
-.bar {
-display: block;
-padding: 14px 16px;
-top:0;
-margin-right:100;
-min-width: auto;
-float:left;
-color: white;
-text-decoration: none;
 }
 .top{
 background: #000000;
@@ -175,9 +220,16 @@ transform: translate(-30%,40%);
 .anim{
   animation:hunieY 2s forwards;
 }
+.rev{
+  animation: rev 2s forwards;
+}
 @keyframes hunieY{
-  from{transform:translateY(20%);}
-  to{transform:translateY(150%);}
+  from{transform:translate(-150%,40%);}
+  to{transform:translate(30%,40%);}
+  }
+  @keyframes rev{
+  from{transform:translate(30%,40%);}
+  to{transform:translate(-150%,40%);}
   }
 @keyframes C{
 from{color:orange; color:pink;}
@@ -201,17 +253,18 @@ div#expand{
 font-size: x-large;
 }
 div.expand{
-text-indent:2;
 margin:10px;
 height:700px;
 width:280px;
 padding:20px;
-background:purple;
+background: rgb(87, 3, 121);
+color:white;
+transition: all 1.5s ease;
 }
 div.hidden{
-height:700px;
-text-indent: 100%;
 white-space: nowrap;
-overflow: hidden;
+height:700px;
+width:280px;
+transition: all 1.5s ease;
 }
   
