--- a/Homepage.css
+++ b/Homepage.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;300&display=swap');
 body.red { 
 background: rgb(206, 76, 126);
 font-family: Fredoka One, Arial, Helvetica, sans-serif;
@@ -32,6 +33,9 @@ padding: 0;
   width: 100%;
   background-color: rgb(218, 40, 108);
   overflow: hidden; 
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 .navbar a {
   float: left;
@@ -100,7 +104,6 @@ li a:hover, .dropdown:hover .dropbtn {
   margin-top:10;
   margin-left:-20;
   display: none;
-  position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -142,7 +145,7 @@ clear: both;
 }
 .column{
 float:left;
-background-color: #f1f1f1;
+
 }
 .column.middle{
 width:50%;
@@ -151,9 +154,9 @@ width:50%;
 width:25%;
 }
 h1.leftside {
-  padding:100;
   display:inline;
   width:33%;
+  color:white;
 }
 .rightside{
 width: 25%;
@@ -174,7 +177,7 @@ color:rgb(0, 0, 0);
 .title .st{
 color:rgb(0, 0, 0);
 float:left;
-margin-left: 860;
+margin-left: 800;
 background-image: url(cookie\ bar.jpg);
 background-size: 50px;
 }
@@ -182,7 +185,10 @@ background-size: 50px;
 .fakeimg {
 background-color: rgb(118, 32, 255);
 width: 100%;
-float:none;
+}
+.column.middle .fakeimg {
+opacity:0%;
+position:relative;
 }
 .height{
 max-height: 500;
@@ -239,12 +245,11 @@ background-color: rgb(0, 110, 253);
 display: "inline-block";
 width:100%;
 opacity:50%;
-border:white;
-border-bottom: #fdfdfd;
+
 }
 .container {
 text-align: center;
-color: white;
+
 }
 .intoyou{
 position:absolute;
@@ -303,4 +308,84 @@ height:700px;
 width:280px;
 transition: all 1.5s ease;
 }
+/*vert tabs*/
+.tab {
+  float: left;
+  padding: 10;
+  border: 1px darkgoldenrod rgb(255, 9, 9);
+  background-color: rgb(118, 32, 255);
+  width: 50%;
+  height: 600px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  background-color: rgb(255, 255, 255);
+  padding: 32px 16px;
+  width: 100%;
+  flex: 1 0 25%;
+  border-left: var(--bordersize) dashed #ccc;
+  border-bottom: var(--bordersize) dashed #ccc;
+  margin-left: calc(-1 * var(--bordersize));
+  margin-bottom: calc(-1 * var(--bordersize));
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 17px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size:x-large;
+
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: rgb(255, 0, 0);
+  transform: scale(1.3);
+  transition-delay: 0s;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  padding: 0px 12px;
+  background-color: rgb(206, 76, 126);
+  border:#ddd;
+  width: 95%;
+  border-left: none;
+  height: 650px; 
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size:50;
+  transition: all 1.5s ease;
+}
+.fitness{
+  background-image:url('favpng_emoji-biceps-iphone-muscle.png');
+  background-size:20%;
+  background-repeat:no-repeat;
+  height:50;
+}
+.applife{
+  background-image:url('favpng_emoji-video-game-sms.png');/*needs img*/
+  background-size:20%;
+  background-repeat:no-repeat;
+  height:50;
+}
+.gamelife{
+  background-image:url('favpng_emoji-video-game-sms.png');
+  background-size:20%;
+  background-repeat:no-repeat;
+  height:50;
+}
+.pfont{
+  font-family:'Yanone Kaffeesatz', sans-serif;
+  font-size:xx-large
+}
+
+
   
